bynkc/tests/fixtures/negative/227_sum_non_exhaustive_match/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer(secret = "S"), identity = UserId }

service api from http {
  on GET("/x") () -> Effect[HttpResult[String]] by who: User | Visitor {
    match who {
      User(u) => Ok(u)
    }
  }
}
